closes #83 - fixed header is not correct width on iOS

--- a/public/css/sass/_layout.scss
+++ b/public/css/sass/_layout.scss
@@ -87,6 +87,9 @@ nav.navbar-default {
 
 .table-fixed-header-wrap {
   position: relative;
+  .table {
+    max-width: none;
+  }
 }
 
 .table-fixed-header {
